--- a/Runtime/be.eloistree.watchtimelayersexecution.Runtime.asmdef
+++ b/Runtime/be.eloistree.watchtimelayersexecution.Runtime.asmdef
@@ -2,7 +2,7 @@
     "name": "be.eloistree.watchtimelayersexecution",
     "rootNamespace": "",
     "references": [
-        "GUID:016d8f0c084de8f47aab6568bc77c8e9"
+        "be.eloistree.watchexecutetime"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
