--- a/Runtime/be.elab.watchtimelayersexecution.Runtime.asmdef
+++ b/Runtime/be.elab.watchtimelayersexecution.Runtime.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "be.eloistree.watchtimelayersexecution",
+    "name": "be.elab.watchtimelayersexecution",
     "rootNamespace": "",
     "references": [
         "be.elab.watchexecutetime"
