--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {                                                                                
-  "name": "be.eloistree.watchtimelayersexecution",                              
+  "name": "be.elab.watchtimelayersexecution",                              
   "displayName": "Watch Time Layers Execution",                        
   "version": "0.0.1",                         
   "unity": "2018.1",                             
