--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 {                                                                                
   "name": "be.elab.watchtimelayersexecution",                              
   "displayName": "Watch Time Layers Execution",                        
-  "version": "2025.1.16",                         
+                         
   "unity": "2018.1",                             
   "unityRelease": "",                             
   "description": "Tool that allows to watch time of a layer of code that need to execute one after an other.",                         
@@ -12,11 +12,19 @@
 
   },     
   "relatedPackages":{},     
-  "samples" : [],     
-  "author" : {
-"name":"Eloi Stree",
-"mail":"",
-"url":""},     
+  "version": "2025.3.25",
+  "samples": [
+    {
+      "displayName": "Demo Scene",
+      "description": "Sample scene(s) of this package.",
+      "path": "Scene/Demo"
+    }
+  ],
+  "author": {
+    "name": "Eloi Stree",
+    "mail": "eloistree@gmail.com",
+    "url": "https://github.com/EloiStree/"
+  },
   "repository":{
 "type":"Git",
 "url":"https://github.com/EloiStree/2024_08_18_WatchTimeLayersExecution.git",
